1.9.4 Update
- added Boss Summoning feature
- added Version Check message on join
- added ingame plugin update option(/dseasons update)
- added spawnboss subcommand
- removed updater option from config
- changed CMD Usage option to a list
- added NoBossFound & BossSpawned in messages.yml